--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li><a href="#">Home</a></li>
 <li><a href="https://github.com/RohanKP1">About</a></li>
 <li><a href="#">Source Code</a></li>
-<li><a href="#">Commands</a></li>
+<li><a href="https://drive.google.com/file/d/1gNrgpwjsbRbzj442vrowKHPo_eO85SAL/view?usp=sharing">Commands</a></li>
 </ul>
 </div>
 <div class="welcome-text">
