--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </div>
 <div class="welcome-text">
         <h1>
-Simple <span>Assistant</span></h1>
+Simple <span>Assistant</span> BETA</h1>
+    <h6>Run manually or create shortcut. [ProgramFiles>assistant>assistant.exe]</h6>    
 <a href="https://drive.google.com/file/d/1fM3Rlp-1cCh_W6inelTu-ALybnmbYQ5w/view?usp=sharing">DOWNLOAD</a>
     </div>
 </header>
